tests/testcases/invalid/semantic/29_goto_outside_function.ciel
// Error: 'goto' statement not within a function
int x = 5;

goto label;  // Error: goto at global scope

label:
x = 10;
